# aeon_api

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  env.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: build_env_run_tests.yml  swc-aeon.yml
aeon/analysis/: plotting.py
aeon/io/: api.py  device.py  reader.py
aeon/preprocess/: api.py
docs/tutorials/: batch-qc.md  run-qc.md
env_config/: env.yml  env_dev.yml  requirements.txt  requirements_dev.txt
notebooks/: qc_exploration.ipynb
qc/: .gitignore  README.md  benchmarks.yaml  deploy.cmd  pyproject.toml
qc/docs/tutorials/: batch-qc.md  run-qc.md
qc/notebooks/: qc_exploration.ipynb
qc/scripts/: dry_run_benchmarks.py  run_benchmarks.py
qc/src/aeon_qc/: __init__.py  encoder.py  environment.py  epochs.py  foraging.py  heartbeat.py  octagon.py  pellet.py  report.py  schemas.py  social.py  sync.py  video.py
scripts/: benchmarks.yaml  dry_run_benchmarks.py  run_benchmarks.py
src/swc/aeon/analysis/: movies.py  plotting.py  utils.py
src/swc/aeon/io/: __init__.py  api.py  reader.py  video.py
src/swc/aeon/qc/: __init__.py  environment.py  epochs.py  foraging.py  harp.py  heartbeat.py  octagon.py  pellet.py  report.py  schemas.py  social.py  sync.py  video.py
src/swc/aeon/rigs/: base.py  data.py  environment.py  experiment.py  foraging.py  harp.py  video.py
src/swc/aeon/schema/: __init__.py  base.py  core.py  environment.py  foraging.py  harp.py  video.py
swc/aeon/: __init__.py
swc/aeon/analysis/: __init__.py  movies.py  plotting.py
swc/aeon/io/: __init__.py  api.py  reader.py
swc/aeon/schema/: __init__.py  core.py
tests/: __init__.py  conftest.py
tests/benchmarks/: test_filter_time_range.py
tests/data/metadata/2025-12-02T13-45-23/: Metadata.json
tests/data/monotonic/2022-06-13T13_14_25/CameraTop/: CameraTop_2022-06-13T12-00-00.csv
tests/data/monotonic/2024-06-19T10-55-14/Environment/: Environment_ActiveConfiguration_2024-06-20T00-00-00.jsonl
tests/data/nonmonotonic/2024-07-03T10-49-40/CameraTop/test-node1/topdown-multianimal-id/: confmap_config.json
tests/data/pose/centered-instance/2024-02-09T16-07-32/CameraTop/5899248/: confmap_config.json
tests/data/pose/missing-class-vectors/2024-03-01T16-46-12/CameraTop/test-node1/model-missing-class-vectors/: confmap_config.json
tests/data/pose/missing-part-names/2024-03-01T16-46-12/CameraTop/test-node1/model-missing-part-names/: confmap_config.json
tests/data/pose/shared-config-file/test-node1/model-missing-config-file/: confmap_config.json
tests/data/pose/topdown/2024-03-01T16-46-12/CameraTop/test-node1/topdown-multianimal-id-133/: confmap_config.json
tests/io/: __init__.py  test_api.py  test_reader.py
tests/schema/: __init__.py  foraging.py  legacypose.py  pose.py
tests/test_integration/: test_api_load.py
tests/test_unit/: test_api.py  test_reader.py
tests/test_unit/analysis/: test_movies.py  test_plotting.py  test_utils.py
tests/test_unit/io/: test_api.py  test_reader.py  test_video.py
tests/test_unit/schema/: test_base.py  test_core.py  test_streams.py
