[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "swc-aeon"
dynamic = ["version"]
requires-python = ">=3.11"
description = '''
    A package for interfacing with acquired data from Project Aeon experiments.
'''
authors = [
  { name = "Jai Bhagat", email = "jkbhagatio@gmail.com" },
  { name = "Goncalo Lopes", email = "g.lopes@neurogears.org" },
  { name = "Thinh Nguyen", email = "thinh@datajoint.com" },
  { name = "Chang Huan Lo", email = "changhuan.lo@ucl.ac.uk" },
  { name = "Joseph Burling", email = "joseph@datajoint.com" },
  { name = "Jaerong Ahn", email = "jaerong.ahn@datajoint.com" },
  { name = "Milagros Marin", email = "milagros@datajoint.com" },
]
license = { file = "license.md" }
readme = "README.md"
dependencies = [
  "dotmap",
  "harp-python>=0.3.0",
  "matplotlib",
  "numpy>=1.21.0, <2",
  "opencv-python",
  "pandas>=1.3",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pyright",
  "pytest",
  "pytest-cov",
  "ruff",
]

[project.urls]
Homepage = "https://sainsburywellcomecentre.github.io/aeon_docs/"
Repository = "https://github.com/sainsburyWellcomeCentre/aeon_api"
Documentation = "https://sainsburywellcomecentre.github.io/aeon_docs/"

[tool.setuptools_scm]
version_file = "swc/aeon/_version.py"

[tool.setuptools.packages.find]
include = ["swc*"]

[tool.ruff]
lint.flake8-builtins.strict-checking = false
lint.select = [
  "E",
  "W",
  "F",
  "I",
  "D",
  "UP",
  "S",
  "B",
  "A",
  "C4",
  "ICN",
  "PIE",
  "PT",
  "SIM",
  "PL",
]
lint.ignore = [
  "E731",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
line-length = 108
extend-exclude = [
  ".git",
  ".github",
  ".idea",
  "*.ipynb",
  ".vscode",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "D103",    # skip adding docstrings for public functions
  "S101",    # skip using assert
]
"aeon/schema/*" = [
  "D101",    # skip adding docstrings for schema classes
  "D106",    # skip adding docstrings for nested streams
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
useLibraryCodeForTypes = false
reportMissingImports = "none"
reportImportCycles = "error"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedfunction = "error"
reportUnusedVariable = "error"
reportDuplicateImport = "error"
reportWildcardImportFromLibrary = "error"
reportPrivateUsage = "error"
reportCallInDefaultInitializer = "error"
reportUnnecessaryIsInstance = "error"
reportUnnecesaryCast = "error"
reportUnnecesarryComparison = "error"
reportUnnecessaryContains = "error"
reportAssertAlwaysTrue = "error"
reportSelfClsParameterName = "error"
reportUnusedExpression = "error"
reportMatchNotExhaustive = "error"
reportShadowedImports = "error"
# *Note*: we may want to set all 'ReportOptional*' rules to "none", but leaving 'em default for now
venvPath = "."
venv = ".venv"
exclude = [".venv/*"]

[tool.pytest.ini_options]
markers = ["api"]
